tests/NormalTests/paczka1/fuzzy1/69408021.err
Error in line 12: unsJ A294 94,3
Error in line 24: hPWaXmo1rX7 A330 269,9
Error in line 27: hPWaXmo1rX7 A643 43,0
Error in line 19: unsJ A437 93,3
Error in line 30: EdgRbm A643 82,3
Error in line 36: ldAabrM1NxY A294 23,2
